fix how user stats show up on mobile

--- a/static/scss/main/user_header.scss
+++ b/static/scss/main/user_header.scss
@@ -7,18 +7,9 @@
 
     .user_stat {
         display: inline-block;
-
-        &:before {
-            content: "·";
-            display: inline-block;
-            margin: 0 5px;
-            color: #999;
-        }
-
-        &:first-child {
-            &:before {
-                content: none;
-            }
+        margin-right: 20px;
+        &:last-child {
+            margin-right: 0;
         }
     }
 }
